# NEWT0

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  README.md  config.status  configure  configure.in
.github/workflows/: build.yml  buildAndTest.yml  ci.yml
cmake/: toolchain-mingw.cmake
contrib/NativeCalls/: Makefile
contrib/NewtObjC/: Constants.h  Makefile  ObjCObjects.m
ext/protoFILE/: Makefile
ext/protoREGEX/: Makefile
src/: config.h  config.h.in  main.c
src/newt_core/: NewtBC.c  NewtEnv.c  NewtFile.c  NewtIconv.c  NewtNSOF.c  NewtPkg.c  NewtStr.c  NewtVM.c
src/newt_core/incs/: NewtEnv.h  NewtIconv.h  NewtType.h
src/newt_core/incs/VC6/: config.h
src/newt_core/incs/darwin/: config.h
src/newt_core/incs/linux/: config.h
src/newt_core/incs/mingw/: NewtConf.h  config.h
src/newt_core/incs/msvc/: config.h
src/parser/: newt.l
